<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <com.ashera.layout.Model param="let title = . from buy_item_transaction->strings into view as string" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />

            <RelativeLayout
                style="@style/main_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    zIndex="-1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/selectlocation_city_store" />

                <ScrollView
                    zIndex="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                        <FrameLayout
                            style="@style/form_card"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">


                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <TextView
                                        style="@style/h2_bold_gray_900"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/item_name"></TextView>


                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">

                                        <TextView
                                            style="@style/h1_bold_black"
                                            modelPojoToUi="text = toString(noOfItems) from item->view"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginBottom="10dp"
                                            android:text="10"></TextView>

                                        <TextView
                                            style="@style/h1_bold_black"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/item_of"></TextView>

                                        <TextView
                                            style="@style/h1_bold_black"
                                            modelPojoToUi="text = itemName from item->view"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"></TextView>


                                    </LinearLayout>

                                    <TextView
                                        style="@style/h2_bold_gray_900"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/token_number"></TextView>

                                    <TextView
                                        style="@style/h1_bold_black"
                                        modelPojoToUi="text = tokenNumber from item->view"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="10dp"
                                        tools:text="TOK342943204203s"></TextView>

                                    <TextView
                                        style="@style/h2_bold_gray_900"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/membership_id"></TextView>

                                    <TextView
                                        style="@style/h1_bold_black"
                                        modelPojoToUi="text = memberShipId from item->view"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="10dp"
                                        android:text="TOK342943204203"></TextView>


                                    <TextView
                                        style="@style/h2_bold_gray_900"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/pay"></TextView>

                                    <TextView
                                        style="@style/h1_bold_black"
                                        layout_marginBottom="10dp"
                                        modelPojoToUi="text = pay from item->view"
                                        textFormat="@string/currency_format"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="Rs 10"></TextView>

                                    <TextView
                                        style="@style/h2_bold_gray_900"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/you_saved"></TextView>

                                    <TextView
                                        style="@style/h1_bold_black"
                                        layout_marginBottom="10dp"
                                        modelPojoToUi="text = save from item->view"
                                        textFormat="@string/perc_format"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="Rs 100"></TextView>

                                    <TextView
                                        style="@style/h2_bold_gray_900"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/valid_at"></TextView>

                                    <TextView
                                        style="@style/h1_bold_black"
                                        modelPojoToUi="text = validAt from item->view"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="10dp"
                                        android:text="Jayanagar"></TextView>

                                    <TextView
                                        style="@style/h2_bold_gray_900"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/expiry"></TextView>

                                    <TextView
                                        style="@style/h1_bold_black"
                                        modelPojoToUi="text = expiryDate from item->view"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="10dp"
                                        android:text="10"></TextView>

                                    <TextView
                                        style="@style/h2_bold_gray_900"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/created_on"></TextView>


                                    <TextView
                                        style="@style/h1_bold_black"
                                        modelPojoToUi="text = createdOn from item->view"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="10dp"
                                        android:text="10"></TextView>
                                </LinearLayout>

                                <Button
                                    android:id="@+id/book"
                                    style="@style/button_style"
                                    onClick="goToPreviousScreen"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/continue_btn"
                                    android:textStyle="bold"></Button>

                                <TextView
                                    style="@style/h3_black"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_horizontal|bottom"
                                    android:padding="10dp"
                                    android:text="@string/token_expire_msg"></TextView>

                            </LinearLayout>
                        </FrameLayout>
                    </LinearLayout>
                </ScrollView>

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>